3-tier-application_1/db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    app: db-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-app
  template:
    metadata:
      name: db-app
      labels:
        app: db-app
    spec:
      containers:
        - name: basic-3tier-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
