3-tier-application_1/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      name: frontend-app
      labels:
        app: frontend-app
    spec:
      volumes:
        - name: config
          configMap:
            name: frontend-configmap
            items:
              - key: config.json
                path: config.json
      containers:
        - name: frontend-app
          image: saurabhd2106/frontend-3tier
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: "/usr/share/nginx/html/configs/"
              readOnly: true
