3-tier-application_1/db-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: basic3tier-postgres
spec:
  type: LoadBalancer
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db-app
