3-tier-application_1/loadbalancer-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: backend-app
