3-tier-application_1/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: loadbalancer-service
            port:
              number: 80
      - path: /backend/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: lb-backend-service
            port:
              number: 80
